fix(theme): Better align sidebar headers

--- a/guide/.vuepress/styles/sidebar.scss
+++ b/guide/.vuepress/styles/sidebar.scss
@@ -36,6 +36,7 @@
 			font-size: 1em;
 			font-weight: 700;
 			text-transform: uppercase;
+			border-left-width: 0;
 		}
 
 		.sidebar-item:not(.sidebar-heading) {
